--- a/UserListTests/UserListTests.csproj
+++ b/UserListTests/UserListTests.csproj
@@ -49,8 +49,10 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="GenericTests.cs" />
+    <Compile Include="MainTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestEnumerable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
